--- a/Project-FW/Project-FW.vcxproj
+++ b/Project-FW/Project-FW.vcxproj
@@ -80,16 +80,26 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CameraManager.cpp" />
     <ClCompile Include="D3dSystem.cpp" />
+    <ClCompile Include="Dialog.cpp" />
+    <ClCompile Include="DialogManager.cpp" />
+    <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="InputDevice.cpp" />
     <ClCompile Include="Joystick.cpp" />
     <ClCompile Include="Keyboard.cpp" />
+    <ClCompile Include="LoadManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="MusicManager.cpp" />
+    <ClCompile Include="Objects.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="SampleScene.cpp" />
+    <ClCompile Include="ScriptCommand.cpp" />
+    <ClCompile Include="ScriptCommand_Say.cpp" />
+    <ClCompile Include="ScriptCommand_Wait.cpp" />
+    <ClCompile Include="ScriptQueueManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="TextureManager.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="UISprite.cpp" />
     <ClCompile Include="WinSystem.cpp" />
   </ItemGroup>
@@ -98,17 +108,28 @@
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="D3dSystem.h" />
     <ClInclude Include="D3dDevice.h" />
+    <ClInclude Include="Dialog.h" />
+    <ClInclude Include="Dialogist.h" />
+    <ClInclude Include="DialogManager.h" />
+    <ClInclude Include="GameScene.h" />
     <ClInclude Include="InputDevice.h" />
     <ClInclude Include="Joystick.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="LoadManager.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="MusicManager.h" />
+    <ClInclude Include="Objects.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="SampleScene.h" />
+    <ClInclude Include="ScriptCommand.h" />
+    <ClInclude Include="ScriptCommand_Say.h" />
+    <ClInclude Include="ScriptCommand_Wait.h" />
+    <ClInclude Include="ScriptQueueManager.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="TitleScene.h" />
     <ClInclude Include="UISprite.h" />
     <ClInclude Include="WinSystem.h" />
   </ItemGroup>
