load 구현 및 버그 수정

--- a/Project-FW/Project-FW.vcxproj
+++ b/Project-FW/Project-FW.vcxproj
@@ -94,6 +94,8 @@
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="SampleScene.cpp" />
     <ClCompile Include="ScriptCommand.cpp" />
+    <ClCompile Include="ScriptCommand_Choice.cpp" />
+    <ClCompile Include="ScriptCommand_Load.cpp" />
     <ClCompile Include="ScriptCommand_Say.cpp" />
     <ClCompile Include="ScriptCommand_Wait.cpp" />
     <ClCompile Include="ScriptQueueManager.cpp" />
@@ -123,6 +125,8 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="SampleScene.h" />
     <ClInclude Include="ScriptCommand.h" />
+    <ClInclude Include="ScriptCommand_Choice.h" />
+    <ClInclude Include="ScriptCommand_Load.h" />
     <ClInclude Include="ScriptCommand_Say.h" />
     <ClInclude Include="ScriptCommand_Wait.h" />
     <ClInclude Include="ScriptQueueManager.h" />
