--- a/Project-FW/Project-FW.vcxproj
+++ b/Project-FW/Project-FW.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="MusicManager.cpp" />
     <ClCompile Include="Objects.cpp" />
+    <ClCompile Include="Objects_Ani.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="SampleScene.cpp" />
     <ClCompile Include="ScriptCommand.cpp" />
@@ -127,6 +128,7 @@
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="MusicManager.h" />
     <ClInclude Include="Objects.h" />
+    <ClInclude Include="Objects_Ani.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="SampleScene.h" />
