--- a/Project-FW/Project-FW.vcxproj.filters
+++ b/Project-FW/Project-FW.vcxproj.filters
@@ -90,6 +90,12 @@
     <ClCompile Include="Objects_Ani.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="DialogistAniManager.cpp">
+      <Filter>Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="ScriptCommand_Ani.cpp">
+      <Filter>ScriptCommand</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Singleton.h" />
@@ -189,6 +195,12 @@
     </ClInclude>
     <ClInclude Include="Objects_Ani.h">
       <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="DialogistAniManager.h">
+      <Filter>Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCommand_Ani.h">
+      <Filter>ScriptCommand</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
