--- a/Project-FW/Project-FW.vcxproj
+++ b/Project-FW/Project-FW.vcxproj
@@ -25,7 +25,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -44,6 +44,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Program Files %28x86%29\FMOD SoundSystem\FMOD Programmers API Windows\api\inc;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\FMOD SoundSystem\FMOD Programmers API Windows\api\lib;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -74,6 +76,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>d3d9.lib;d3dx9.lib;dinput8.lib;dxguid.lib;winmm.lib;fmodex_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -101,6 +104,7 @@
     <ClCompile Include="ScriptCommand.cpp" />
     <ClCompile Include="ScriptCommand_Ani.cpp" />
     <ClCompile Include="ScriptCommand_Choice.cpp" />
+    <ClCompile Include="ScriptCommand_Guest.cpp" />
     <ClCompile Include="ScriptCommand_Load.cpp" />
     <ClCompile Include="ScriptCommand_Say.cpp" />
     <ClCompile Include="ScriptCommand_Sound.cpp" />
@@ -139,6 +143,7 @@
     <ClInclude Include="ScriptCommand.h" />
     <ClInclude Include="ScriptCommand_Ani.h" />
     <ClInclude Include="ScriptCommand_Choice.h" />
+    <ClInclude Include="ScriptCommand_Guest.h" />
     <ClInclude Include="ScriptCommand_Load.h" />
     <ClInclude Include="ScriptCommand_Say.h" />
     <ClInclude Include="ScriptCommand_Sound.h" />
