--- a/Project-FW/Project-FW.vcxproj
+++ b/Project-FW/Project-FW.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="D3dSystem.cpp" />
     <ClCompile Include="Dialog.cpp" />
     <ClCompile Include="DialogManager.cpp" />
+    <ClCompile Include="EndingScene.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="InputDevice.cpp" />
     <ClCompile Include="Joystick.cpp" />
@@ -129,6 +130,7 @@
     <ClInclude Include="Dialog.h" />
     <ClInclude Include="Dialogist.h" />
     <ClInclude Include="DialogManager.h" />
+    <ClInclude Include="EndingScene.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="InputDevice.h" />
     <ClInclude Include="Joystick.h" />
